y.output
Terminals unused in grammar

   KEYWORD_struct
   KEYWORD_typedef
   KEYWORD_union


State 355 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 N: %empty

    3 primary_expression: IDENTIFIER
    4                   | INT_CONSTANT
    5                   | FLOAT_CONSTANT
    6                   | CHAR_CONSTANT
    7                   | STRING_LITERAL
    8                   | '(' expression ')'

    9 postfix_expression: primary_expression
   10                   | postfix_expression '[' expression ']'
   11                   | postfix_expression '(' ')'
   12                   | postfix_expression '(' argument_expression_list ')'
   13                   | postfix_expression '.' IDENTIFIER
   14                   | postfix_expression POINTER_OP IDENTIFIER
   15                   | postfix_expression INCREMENT_OP
   16                   | postfix_expression DECREMENT_OP
   17                   | '(' type_name ')' '{' initializer_list '}'
   18                   | '(' type_name ')' '{' initializer_list ',' '}'

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list ',' assignment_expression

   21 unary_expression: postfix_expression
   22                 | INCREMENT_OP unary_expression
   23                 | DECREMENT_OP unary_expression
   24                 | unary_operator cast_expression
   25                 | KEYWORD_sizeof unary_expression
   26                 | KEYWORD_sizeof '(' type_name ')'

   27 unary_operator: '&'
   28               | '*'
   29               | '+'
   30               | '-'
   31               | '~'
   32               | '!'

   33 cast_expression: unary_expression
   34                | '(' type_name ')' cast_expression

   35 multiplicative_expression: cast_expression
   36                          | multiplicative_expression '*' cast_expression
   37                          | multiplicative_expression '/' cast_expression
   38                          | multiplicative_expression '%' cast_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression '+' multiplicative_expression
   41                    | additive_expression '-' multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression LEFT_SHIFT additive_expression
   44                 | shift_expression RIGHT_SHIFT additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression '<' shift_expression
   47                      | relational_expression '>' shift_expression
   48                      | relational_expression LESS_EQ_OP shift_expression
   49                      | relational_expression GREATER_EQ_OP shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQ_OP relational_expression
   52                    | equality_expression NOT_EQ_OP relational_expression

   53 and_expression: equality_expression
   54               | and_expression '&' equality_expression

   55 exclusive_or_expression: and_expression
   56                        | exclusive_or_expression '^' and_expression

   57 inclusive_or_expression: exclusive_or_expression
   58                        | inclusive_or_expression '|' exclusive_or_expression

   59 logical_and_expression: inclusive_or_expression
   60                       | logical_and_expression N AND_OP M inclusive_or_expression N

   61 logical_or_expression: logical_and_expression
   62                      | logical_or_expression N OR_OP M logical_and_expression N

   63 conditional_expression: logical_or_expression
   64                       | logical_or_expression N '?' M expression N ':' M conditional_expression

   65 assignment_expression: conditional_expression
   66                      | unary_expression assignment_operator assignment_expression

   67 assignment_operator: '='
   68                    | MUL_ASSIGNMENT
   69                    | DIV_ASSIGNMENT
   70                    | MOD_ASSIGNMENT
   71                    | ADD_ASSIGNMENT
   72                    | SUB_ASSIGNMENT
   73                    | LEFT_ASSIGNMENT
   74                    | RIGHT_ASSIGNMENT
   75                    | AND_ASSIGNMENT
   76                    | XOR_ASSIGNMENT
   77                    | OR_ASSIGNMENT

   78 expression: assignment_expression
   79           | expression ',' assignment_expression

   80 constant_expression: conditional_expression

   81 declaration: declaration_specifiers ';'
   82            | declaration_specifiers init_declarator_list ';'

   83 declaration_specifiers: storage_class_specifier
   84                       | storage_class_specifier declaration_specifiers
   85                       | type_specifier
   86                       | type_specifier declaration_specifiers
   87                       | type_qualifier
   88                       | type_qualifier declaration_specifiers
   89                       | function_specifier
   90                       | function_specifier declaration_specifiers

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list ',' init_declarator

   93 init_declarator: declarator
   94                | declarator '=' initializer

   95 storage_class_specifier: KEYWORD_extern
   96                        | KEYWORD_static
   97                        | KEYWORD_auto
   98                        | KEYWORD_register

   99 type_specifier: KEYWORD_void
  100               | KEYWORD_char
  101               | KEYWORD_short
  102               | KEYWORD_int
  103               | KEYWORD_long
  104               | KEYWORD_float
  105               | KEYWORD_double
  106               | KEYWORD_signed
  107               | KEYWORD_unsigned
  108               | KEYWORD_bool
  109               | KEYWORD_complex
  110               | KEYWORD_imaginary
  111               | enum_specifier

  112 specifier_qualifier_list: type_specifier
  113                         | type_specifier specifier_qualifier_list
  114                         | type_qualifier
  115                         | type_qualifier specifier_qualifier_list

  116 enum_specifier: KEYWORD_enum '{' enumerator_list '}'
  117               | KEYWORD_enum IDENTIFIER '{' enumerator_list '}'
  118               | KEYWORD_enum '{' enumerator_list ',' '}'
  119               | KEYWORD_enum IDENTIFIER '{' enumerator_list ',' '}'
  120               | KEYWORD_enum IDENTIFIER

  121 enumerator_list: enumerator
  122                | enumerator_list ',' enumerator

  123 enumerator: enumeration_constant
  124           | enumeration_constant '=' constant_expression

  125 enumeration_constant: IDENTIFIER

  126 type_qualifier: KEYWORD_const
  127               | KEYWORD_restrict
  128               | KEYWORD_volatile

  129 function_specifier: KEYWORD_inline

  130 declarator: pointer direct_declarator
  131           | direct_declarator

  132 direct_declarator: IDENTIFIER
  133                  | '(' declarator ')'
  134                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  135                  | direct_declarator '[' KEYWORD_static type_qualifier_list_opt assignment_expression ']'
  136                  | direct_declarator '[' type_qualifier_list KEYWORD_static assignment_expression ']'
  137                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
  138                  | direct_declarator '(' parameter_type_list_opt ')'
  139                  | direct_declarator '(' identifier_list ')'

  140 assignment_expression_opt: assignment_expression
  141                          | %empty

  142 type_qualifier_list_opt: type_qualifier_list
  143                        | %empty

  144 pointer: '*'
  145        | '*' type_qualifier_list
  146        | '*' pointer
  147        | '*' type_qualifier_list pointer

  148 type_qualifier_list: type_qualifier
  149                    | type_qualifier_list type_qualifier

  150 parameter_type_list_opt: parameter_type_list
  151                        | %empty

  152 parameter_type_list: parameter_list
  153                    | parameter_list ',' ELLIPSIS

  154 parameter_list: parameter_declaration
  155               | parameter_list ',' parameter_declaration

  156 parameter_declaration: declaration_specifiers declarator
  157                      | declaration_specifiers

  158 identifier_list: IDENTIFIER
  159                | identifier_list ',' IDENTIFIER

  160 type_name: specifier_qualifier_list

  161 initializer: assignment_expression
  162            | '{' initializer_list '}'
  163            | '{' initializer_list ',' '}'

  164 initializer_list: initializer
  165                 | designation initializer
  166                 | initializer_list ',' initializer
  167                 | initializer_list ',' designation initializer

  168 designation: designator_list '='

  169 designator_list: designator
  170                | designator_list designator

  171 designator: '[' constant_expression ']'
  172           | '.' IDENTIFIER

  173 statement: labeled_statement
  174          | compound_statement
  175          | expression_statement
  176          | selection_statement
  177          | iteration_statement
  178          | jump_statement

  179 labeled_statement: IDENTIFIER ':' statement
  180                  | KEYWORD_case constant_expression ':' statement
  181                  | KEYWORD_default ':' statement

  182 compound_statement: '{' '}'
  183                   | '{' block_item_list '}'

  184 block_item_list: block_item
  185                | block_item_list M block_item

  186 block_item: declaration
  187           | statement

  188 expression_statement: ';'
  189                     | expression ';'

  190 selection_statement: KEYWORD_if '(' expression N ')' M statement N
  191                    | KEYWORD_if '(' expression N ')' M statement N KEYWORD_else M statement N
  192                    | KEYWORD_switch '(' expression ')' statement

  193 iteration_statement: KEYWORD_while M '(' expression N ')' M statement
  194                    | KEYWORD_do M statement M KEYWORD_while '(' expression ')' ';'
  195                    | KEYWORD_for '(' expression_opt ';' M expression_opt N ';' M expression_opt N ')' M statement
  196                    | KEYWORD_for '(' declaration expression_opt ';' expression_opt ')' statement

  197 expression_opt: expression
  198               | %empty

  199 jump_statement: KEYWORD_goto IDENTIFIER ';'
  200               | KEYWORD_continue ';'
  201               | KEYWORD_break ';'
  202               | KEYWORD_return ';'
  203               | KEYWORD_return expression ';'

  204 translation_unit: external_declaration
  205                 | translation_unit external_declaration

  206 external_declaration: function_definition
  207                     | declaration

  208 function_definition: declaration_specifiers declarator declaration_list compound_statement
  209                    | declaration_specifiers declarator compound_statement

  210 declaration_list: declaration
  211                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 32
'%' (37) 38
'&' (38) 27 54
'(' (40) 8 11 12 17 18 26 34 133 138 139 190 191 192 193 194 195 196
')' (41) 8 11 12 17 18 26 34 133 138 139 190 191 192 193 194 195 196
'*' (42) 28 36 137 144 145 146 147
'+' (43) 29 40
',' (44) 18 20 79 92 118 119 122 153 155 159 163 166 167
'-' (45) 30 41
'.' (46) 13 172
'/' (47) 37
':' (58) 64 179 180 181
';' (59) 81 82 188 189 194 195 196 199 200 201 202 203
'<' (60) 46
'=' (61) 67 94 124 168
'>' (62) 47
'?' (63) 64
'[' (91) 10 134 135 136 137 171
']' (93) 10 134 135 136 137 171
'^' (94) 56
'{' (123) 17 18 116 117 118 119 162 163 182 183
'|' (124) 58
'}' (125) 17 18 116 117 118 119 162 163 182 183
'~' (126) 31
error (256)
KEYWORD_restrict (258) 127
KEYWORD_unsigned (259) 107
KEYWORD_auto (260) 97
KEYWORD_enum (261) 116 117 118 119 120
KEYWORD_break (262) 201
KEYWORD_extern (263) 95
KEYWORD_return (264) 202 203
KEYWORD_void (265) 99
KEYWORD_case (266) 180
KEYWORD_float (267) 104
KEYWORD_short (268) 101
KEYWORD_volatile (269) 128
KEYWORD_char (270) 100
KEYWORD_for (271) 195 196
KEYWORD_signed (272) 106
KEYWORD_while (273) 193 194
KEYWORD_const (274) 126
KEYWORD_goto (275) 199
KEYWORD_sizeof (276) 25 26
KEYWORD_bool (277) 108
KEYWORD_continue (278) 200
KEYWORD_if (279) 190 191
KEYWORD_static (280) 96 135 136
KEYWORD_complex (281) 109
KEYWORD_default (282) 181
KEYWORD_inline (283) 129
KEYWORD_struct (284)
KEYWORD_imaginary (285) 110
KEYWORD_do (286) 194
KEYWORD_int (287) 102
KEYWORD_switch (288) 192
KEYWORD_double (289) 105
KEYWORD_long (290) 103
KEYWORD_typedef (291)
KEYWORD_else (292) 191
KEYWORD_register (293) 98
KEYWORD_union (294)
IDENTIFIER (295) 3 13 14 117 119 120 125 132 158 159 172 179 199
INT_CONSTANT (296) 4
FLOAT_CONSTANT (297) 5
CHAR_CONSTANT (298) 6
STRING_LITERAL (299) 7
POINTER_OP (300) 14
INCREMENT_OP (301) 15 22
DECREMENT_OP (302) 16 23
LEFT_SHIFT (303) 43
RIGHT_SHIFT (304) 44
LESS_EQ_OP (305) 48
GREATER_EQ_OP (306) 49
EQ_OP (307) 51
NOT_EQ_OP (308) 52
AND_OP (309) 60
OR_OP (310) 62
ELLIPSIS (311) 153
MUL_ASSIGNMENT (312) 68
DIV_ASSIGNMENT (313) 69
MOD_ASSIGNMENT (314) 70
ADD_ASSIGNMENT (315) 71
SUB_ASSIGNMENT (316) 72
LEFT_ASSIGNMENT (317) 73
RIGHT_ASSIGNMENT (318) 74
AND_ASSIGNMENT (319) 75
XOR_ASSIGNMENT (320) 76
OR_ASSIGNMENT (321) 77


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
M (92)
    on left: 1, on right: 60 62 64 185 190 191 193 194 195
N (93)
    on left: 2, on right: 60 62 64 190 191 193 195
primary_expression (94)
    on left: 3 4 5 6 7 8, on right: 9
postfix_expression (95)
    on left: 9 10 11 12 13 14 15 16 17 18, on right: 10 11 12 13 14
    15 16 21
argument_expression_list (96)
    on left: 19 20, on right: 12 20
unary_expression (97)
    on left: 21 22 23 24 25 26, on right: 22 23 25 33 66
unary_operator (98)
    on left: 27 28 29 30 31 32, on right: 24
cast_expression (99)
    on left: 33 34, on right: 24 34 35 36 37 38
multiplicative_expression (100)
    on left: 35 36 37 38, on right: 36 37 38 39 40 41
additive_expression (101)
    on left: 39 40 41, on right: 40 41 42 43 44
shift_expression (102)
    on left: 42 43 44, on right: 43 44 45 46 47 48 49
relational_expression (103)
    on left: 45 46 47 48 49, on right: 46 47 48 49 50 51 52
equality_expression (104)
    on left: 50 51 52, on right: 51 52 53 54
and_expression (105)
    on left: 53 54, on right: 54 55 56
exclusive_or_expression (106)
    on left: 55 56, on right: 56 57 58
inclusive_or_expression (107)
    on left: 57 58, on right: 58 59 60
logical_and_expression (108)
    on left: 59 60, on right: 60 61 62
logical_or_expression (109)
    on left: 61 62, on right: 62 63 64
conditional_expression (110)
    on left: 63 64, on right: 64 65 80
assignment_expression (111)
    on left: 65 66, on right: 19 20 66 78 79 135 136 140 161
assignment_operator (112)
    on left: 67 68 69 70 71 72 73 74 75 76 77, on right: 66
expression (113)
    on left: 78 79, on right: 8 10 64 79 189 190 191 192 193 194 197
    203
constant_expression (114)
    on left: 80, on right: 124 171 180
declaration (115)
    on left: 81 82, on right: 186 196 207 210 211
declaration_specifiers (116)
    on left: 83 84 85 86 87 88 89 90, on right: 81 82 84 86 88 90 156
    157 208 209
init_declarator_list (117)
    on left: 91 92, on right: 82 92
init_declarator (118)
    on left: 93 94, on right: 91 92
storage_class_specifier (119)
    on left: 95 96 97 98, on right: 83 84
type_specifier (120)
    on left: 99 100 101 102 103 104 105 106 107 108 109 110 111, on right:
    85 86 112 113
specifier_qualifier_list (121)
    on left: 112 113 114 115, on right: 113 115 160
enum_specifier (122)
    on left: 116 117 118 119 120, on right: 111
enumerator_list (123)
    on left: 121 122, on right: 116 117 118 119 122
enumerator (124)
    on left: 123 124, on right: 121 122
enumeration_constant (125)
    on left: 125, on right: 123 124
type_qualifier (126)
    on left: 126 127 128, on right: 87 88 114 115 148 149
function_specifier (127)
    on left: 129, on right: 89 90
declarator (128)
    on left: 130 131, on right: 93 94 133 156 208 209
direct_declarator (129)
    on left: 132 133 134 135 136 137 138 139, on right: 130 131 134
    135 136 137 138 139
assignment_expression_opt (130)
    on left: 140 141, on right: 134
type_qualifier_list_opt (131)
    on left: 142 143, on right: 134 135 137
pointer (132)
    on left: 144 145 146 147, on right: 130 146 147
type_qualifier_list (133)
    on left: 148 149, on right: 136 142 145 147 149
parameter_type_list_opt (134)
    on left: 150 151, on right: 138
parameter_type_list (135)
    on left: 152 153, on right: 150
parameter_list (136)
    on left: 154 155, on right: 152 153 155
parameter_declaration (137)
    on left: 156 157, on right: 154 155
identifier_list (138)
    on left: 158 159, on right: 139 159
type_name (139)
    on left: 160, on right: 17 18 26 34
initializer (140)
    on left: 161 162 163, on right: 94 164 165 166 167
initializer_list (141)
    on left: 164 165 166 167, on right: 17 18 162 163 166 167
designation (142)
    on left: 168, on right: 165 167
designator_list (143)
    on left: 169 170, on right: 168 170
designator (144)
    on left: 171 172, on right: 169 170
statement (145)
    on left: 173 174 175 176 177 178, on right: 179 180 181 187 190
    191 192 193 194 195 196
labeled_statement (146)
    on left: 179 180 181, on right: 173
compound_statement (147)
    on left: 182 183, on right: 174 208 209
block_item_list (148)
    on left: 184 185, on right: 183 185
block_item (149)
    on left: 186 187, on right: 184 185
expression_statement (150)
    on left: 188 189, on right: 175
selection_statement (151)
    on left: 190 191 192, on right: 176
iteration_statement (152)
    on left: 193 194 195 196, on right: 177
expression_opt (153)
    on left: 197 198, on right: 195 196
jump_statement (154)
    on left: 199 200 201 202 203, on right: 178
translation_unit (155)
    on left: 204 205, on right: 0 205
external_declaration (156)
    on left: 206 207, on right: 204 205
function_definition (157)
    on left: 208 209, on right: 206
declaration_list (158)
    on left: 210 211, on right: 208 211


State 0

    0 $accept: . translation_unit $end

    KEYWORD_restrict   shift, and go to state 1
    KEYWORD_unsigned   shift, and go to state 2
    KEYWORD_auto       shift, and go to state 3
    KEYWORD_enum       shift, and go to state 4
    KEYWORD_extern     shift, and go to state 5
    KEYWORD_void       shift, and go to state 6
    KEYWORD_float      shift, and go to state 7
    KEYWORD_short      shift, and go to state 8
    KEYWORD_volatile   shift, and go to state 9
    KEYWORD_char       shift, and go to state 10
    KEYWORD_signed     shift, and go to state 11
    KEYWORD_const      shift, and go to state 12
    KEYWORD_bool       shift, and go to state 13
    KEYWORD_static     shift, and go to state 14
    KEYWORD_complex    shift, and go to state 15
    KEYWORD_inline     shift, and go to state 16
    KEYWORD_imaginary  shift, and go to state 17
    KEYWORD_int        shift, and go to state 18
    KEYWORD_double     shift, and go to state 19
    KEYWORD_long       shift, and go to state 20
    KEYWORD_register   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

  127 type_qualifier: KEYWORD_restrict .

    $default  reduce using rule 127 (type_qualifier)


State 2

  107 type_specifier: KEYWORD_unsigned .

    $default  reduce using rule 107 (type_specifier)


State 3

   97 storage_class_specifier: KEYWORD_auto .

    $default  reduce using rule 97 (storage_class_specifier)


State 4

  116 enum_specifier: KEYWORD_enum . '{' enumerator_list '}'
  117               | KEYWORD_enum . IDENTIFIER '{' enumerator_list '}'
  118               | KEYWORD_enum . '{' enumerator_list ',' '}'
  119               | KEYWORD_enum . IDENTIFIER '{' enumerator_list ',' '}'
  120               | KEYWORD_enum . IDENTIFIER

    IDENTIFIER  shift, and go to state 32
    '{'         shift, and go to state 33


State 5

   95 storage_class_specifier: KEYWORD_extern .

    $default  reduce using rule 95 (storage_class_specifier)


State 6

   99 type_specifier: KEYWORD_void .

    $default  reduce using rule 99 (type_specifier)


State 7

  104 type_specifier: KEYWORD_float .

    $default  reduce using rule 104 (type_specifier)


State 8

  101 type_specifier: KEYWORD_short .

    $default  reduce using rule 101 (type_specifier)


State 9

  128 type_qualifier: KEYWORD_volatile .

    $default  reduce using rule 128 (type_qualifier)


State 10

  100 type_specifier: KEYWORD_char .

    $default  reduce using rule 100 (type_specifier)


State 11

  106 type_specifier: KEYWORD_signed .

    $default  reduce using rule 106 (type_specifier)


State 12

  126 type_qualifier: KEYWORD_const .

    $default  reduce using rule 126 (type_qualifier)


State 13

  108 type_specifier: KEYWORD_bool .

    $default  reduce using rule 108 (type_specifier)


State 14

   96 storage_class_specifier: KEYWORD_static .

    $default  reduce using rule 96 (storage_class_specifier)


State 15

  109 type_specifier: KEYWORD_complex .

    $default  reduce using rule 109 (type_specifier)


State 16

  129 function_specifier: KEYWORD_inline .

    $default  reduce using rule 129 (function_specifier)


State 17

  110 type_specifier: KEYWORD_imaginary .

    $default  reduce using rule 110 (type_specifier)


State 18

  102 type_specifier: KEYWORD_int .

    $default  reduce using rule 102 (type_specifier)


State 19

  105 type_specifier: KEYWORD_double .

    $default  reduce using rule 105 (type_specifier)


State 20

  103 type_specifier: KEYWORD_long .

    $default  reduce using rule 103 (type_specifier)


State 21

   98 storage_class_specifier: KEYWORD_register .

    $default  reduce using rule 98 (storage_class_specifier)


State 22

  207 external_declaration: declaration .

    $default  reduce using rule 207 (external_declaration)


State 23

   81 declaration: declaration_specifiers . ';'
   82            | declaration_specifiers . init_declarator_list ';'
  208 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  209                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35
    '*'         shift, and go to state 36
    ';'         shift, and go to state 37

    init_declarator_list  go to state 38
    init_declarator       go to state 39
    declarator            go to state 40
    direct_declarator     go to state 41
    pointer               go to state 42


State 24

   83 declaration_specifiers: storage_class_specifier .
   84                       | storage_class_specifier . declaration_specifiers

    KEYWORD_restrict   shift, and go to state 1
    KEYWORD_unsigned   shift, and go to state 2
    KEYWORD_auto       shift, and go to state 3
    KEYWORD_enum       shift, and go to state 4
    KEYWORD_extern     shift, and go to state 5
    KEYWORD_void       shift, and go to state 6
    KEYWORD_float      shift, and go to state 7
    KEYWORD_short      shift, and go to state 8
    KEYWORD_volatile   shift, and go to state 9
    KEYWORD_char       shift, and go to state 10
    KEYWORD_signed     shift, and go to state 11
    KEYWORD_const      shift, and go to state 12
    KEYWORD_bool       shift, and go to state 13
    KEYWORD_static     shift, and go to state 14
    KEYWORD_complex    shift, and go to state 15
    KEYWORD_inline     shift, and go to state 16
    KEYWORD_imaginary  shift, and go to state 17
    KEYWORD_int        shift, and go to state 18
    KEYWORD_double     shift, and go to state 19
    KEYWORD_long       shift, and go to state 20
    KEYWORD_register   shift, and go to state 21

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   85 declaration_specifiers: type_specifier .
   86                       | type_specifier . declaration_specifiers

    KEYWORD_restrict   shift, and go to state 1
    KEYWORD_unsigned   shift, and go to state 2
    KEYWORD_auto       shift, and go to state 3
    KEYWORD_enum       shift, and go to state 4
    KEYWORD_extern     shift, and go to state 5
    KEYWORD_void       shift, and go to state 6
    KEYWORD_float      shift, and go to state 7
    KEYWORD_short      shift, and go to state 8
    KEYWORD_volatile   shift, and go to state 9
    KEYWORD_char       shift, and go to state 10
    KEYWORD_signed     shift, and go to state 11
    KEYWORD_const      shift, and go to state 12
    KEYWORD_bool       shift, and go to state 13
    KEYWORD_static     shift, and go to state 14
    KEYWORD_complex    shift, and go to state 15
    KEYWORD_inline     shift, and go to state 16
    KEYWORD_imaginary  shift, and go to state 17
    KEYWORD_int        shift, and go to state 18
    KEYWORD_double     shift, and go to state 19
    KEYWORD_long       shift, and go to state 20
    KEYWORD_register   shift, and go to state 21

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  111 type_specifier: enum_specifier .

    $default  reduce using rule 111 (type_specifier)


State 27

   87 declaration_specifiers: type_qualifier .
   88                       | type_qualifier . declaration_specifiers

    KEYWORD_restrict   shift, and go to state 1
    KEYWORD_unsigned   shift, and go to state 2
    KEYWORD_auto       shift, and go to state 3
    KEYWORD_enum       shift, and go to state 4
    KEYWORD_extern     shift, and go to state 5
    KEYWORD_void       shift, and go to state 6
    KEYWORD_float      shift, and go to state 7
    KEYWORD_short      shift, and go to state 8
    KEYWORD_volatile   shift, and go to state 9
    KEYWORD_char       shift, and go to state 10
    KEYWORD_signed     shift, and go to state 11
    KEYWORD_const      shift, and go to state 12
    KEYWORD_bool       shift, and go to state 13
    KEYWORD_static     shift, and go to state 14
    KEYWORD_complex    shift, and go to state 15
    KEYWORD_inline     shift, and go to state 16
    KEYWORD_imaginary  shift, and go to state 17
    KEYWORD_int        shift, and go to state 18
    KEYWORD_double     shift, and go to state 19
    KEYWORD_long       shift, and go to state 20
    KEYWORD_register   shift, and go to state 21

    $default  reduce using rule 87 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28

   89 declaration_specifiers: function_specifier .
   90                       | function_specifier . declaration_specifiers

    KEYWORD_restrict   shift, and go to state 1
    KEYWORD_unsigned   shift, and go to state 2
    KEYWORD_auto       shift, and go to state 3
    KEYWORD_enum       shift, and go to state 4
    KEYWORD_extern     shift, and go to state 5
    KEYWORD_void       shift, and go to state 6
    KEYWORD_float      shift, and go to state 7
    KEYWORD_short      shift, and go to state 8
    KEYWORD_volatile   shift, and go to state 9
    KEYWORD_char       shift, and go to state 10
    KEYWORD_signed     shift, and go to state 11
    KEYWORD_const      shift, and go to state 12
    KEYWORD_bool       shift, and go to state 13
    KEYWORD_static     shift, and go to state 14
    KEYWORD_complex    shift, and go to state 15
    KEYWORD_inline     shift, and go to state 16
    KEYWORD_imaginary  shift, and go to state 17
    KEYWORD_int        shift, and go to state 18
    KEYWORD_double     shift, and go to state 19
    KEYWORD_long       shift, and go to state 20
    KEYWORD_register   shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 29

    0 $accept: translation_unit . $end
  205 translation_unit: translation_unit . external_declaration

    $end               shift, and go to state 47
    KEYWORD_restrict   shift, and go to state 1
    KEYWORD_unsigned   shift, and go to state 2
    KEYWORD_auto       shift, and go to state 3
    KEYWORD_enum       shift, and go to state 4
    KEYWORD_extern     shift, and go to state 5
    KEYWORD_void       shift, and go to state 6
    KEYWORD_float      shift, and go to state 7
    KEYWORD_short      shift, and go to state 8
    KEYWORD_volatile   shift, and go to state 9
    KEYWORD_char       shift, and go to state 10
    KEYWORD_signed     shift, and go to state 11
    KEYWORD_const      shift, and go to state 12
    KEYWORD_bool       shift, and go to state 13
    KEYWORD_static     shift, and go to state 14
    KEYWORD_complex    shift, and go to state 15
    KEYWORD_inline     shift, and go to state 16
    KEYWORD_imaginary  shift, and go to state 17
    KEYWORD_int        shift, and go to state 18
    KEYWORD_double     shift, and go to state 19
    KEYWORD_long       shift, and go to state 20
    KEYWORD_register   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 48
    function_definition      go to state 31


State 30

  204 translation_unit: external_declaration .

    $default  reduce using rule 204 (translation_unit)


State 31

  206 external_declaration: function_definition .

    $default  reduce using rule 206 (external_declaration)


State 32

  117 enum_specifier: KEYWORD_enum IDENTIFIER . '{' enumerator_list '}'
  119               | KEYWORD_enum IDENTIFIER . '{' enumerator_list ',' '}'
  120               | KEYWORD_enum IDENTIFIER .

    '{'  shift, and go to state 49

    $default  reduce using rule 120 (enum_specifier)


State 33

  116 enum_specifier: KEYWORD_enum '{' . enumerator_list '}'
  118               | KEYWORD_enum '{' . enumerator_list ',' '}'

    IDENTIFIER  shift, and go to state 50

    enumerator_list       go to state 51
    enumerator            go to state 52
    enumeration_constant  go to state 53


State 34

  132 direct_declarator: IDENTIFIER .

    $default  reduce using rule 132 (direct_declarator)


State 35

  133 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35
    '*'         shift, and go to state 36

    declarator         go to state 54
    direct_declarator  go to state 41
    pointer            go to state 42


State 36

  144 pointer: '*' .
  145        | '*' . type_qualifier_list
  146        | '*' . pointer
  147        | '*' . type_qualifier_list pointer

    KEYWORD_restrict  shift, and go to state 1
    KEYWORD_volatile  shift, and go to state 9
    KEYWORD_const     shift, and go to state 12
    '*'               shift, and go to state 36

    $default  reduce using rule 144 (pointer)

    type_qualifier       go to state 55
    pointer              go to state 56
    type_qualifier_list  go to state 57


State 37

   81 declaration: declaration_specifiers ';' .

    $default  reduce using rule 81 (declaration)


State 38

   82 declaration: declaration_specifiers init_declarator_list . ';'
   92 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 58
    ';'  shift, and go to state 59


State 39

   91 init_declarator_list: init_declarator .

    $default  reduce using rule 91 (init_declarator_list)


State 40

   93 init_declarator: declarator .
   94                | declarator . '=' initializer
  208 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  209                    | declaration_specifiers declarator . compound_statement

    KEYWORD_restrict   shift, and go to state 1
    KEYWORD_unsigned   shift, and go to state 2
    KEYWORD_auto       shift, and go to state 3
    KEYWORD_enum       shift, and go to state 4
    KEYWORD_extern     shift, and go to state 5
    KEYWORD_void       shift, and go to state 6
    KEYWORD_float      shift, and go to state 7
    KEYWORD_short      shift, and go to state 8
    KEYWORD_volatile   shift, and go to state 9
    KEYWORD_char       shift, and go to state 10
    KEYWORD_signed     shift, and go to state 11
    KEYWORD_const      shift, and go to state 12
    KEYWORD_bool       shift, and go to state 13
    KEYWORD_static     shift, and go to state 14
    KEYWORD_complex    shift, and go to state 15
    KEYWORD_inline     shift, and go to state 16
    KEYWORD_imaginary  shift, and go to state 17
    KEYWORD_int        shift, and go to state 18
    KEYWORD_double     shift, and go to state 19
    KEYWORD_long       shift, and go to state 20
    KEYWORD_register   shift, and go to state 21
    '{'                shift, and go to state 60
    '='                shift, and go to state 61

    $default  reduce using rule 93 (init_declarator)

    declaration              go to state 62
    declaration_specifiers   go to state 63
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    compound_statement       go to state 64
    declaration_list         go to state 65


State 41

  131 declarator: direct_declarator .
  134 direct_declarator: direct_declarator . '[' type_qualifier_list_opt assignment_expression_opt ']'
  135                  | direct_declarator . '[' KEYWORD_static type_qualifier_list_opt assignment_expression ']'
  136                  | direct_declarator . '[' type_qualifier_list KEYWORD_static assignment_expression ']'
  137                  | direct_declarator . '[' type_qualifier_list_opt '*' ']'
  138                  | direct_declarator . '(' parameter_type_list_opt ')'
  139                  | direct_declarator . '(' identifier_list ')'

    '('  shift, and go to state 66
    '['  shift, and go to state 67

    $default  reduce using rule 131 (declarator)


State 42

  130 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    direct_declarator  go to state 68


State 43

   84 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 84 (declaration_specifiers)


State 44

   86 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 86 (declaration_specifiers)


State 45

   88 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 88 (declaration_specifiers)


State 46

   90 declaration_specifiers: function_specifier declaration_specifiers .

    $default  reduce using rule 90 (declaration_specifiers)


State 47

    0 $accept: translation_unit $end .

    $default  accept


State 48

  205 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 205 (translation_unit)


State 49

  117 enum_specifier: KEYWORD_enum IDENTIFIER '{' . enumerator_list '}'
  119               | KEYWORD_enum IDENTIFIER '{' . enumerator_list ',' '}'
